csv/csv.g4
grammar csv;
prog:   (row NEWLINE)*;
row:    field (SEP field)*;
field:  TEXT | NUMBER | STRING;
TEXT:   ~[;,|\r\n]+;
NUMBER: '-'?[0-9]+('.'[0-9]+)?;
STRING: '"' ~["\r\n]* '"' ;
SEP:    ',' | ';' | '|';
NEWLINE:'\r\n' | '\r' | '\n' ;
BLANK:  [ \t]+ -> skip;
